--- a/rustdesk/index.html
+++ b/rustdesk/index.html
@@ -10,22 +10,23 @@
         font-family: Arial, sans-serif;
         background-color: #e6eefb;
         color: #333;
-        text-align: center;
-        padding: 40px 20px;
         margin: 0;
-        position: relative;
-        min-height: 100vh;
+        padding: 40px 20px;
     }
 
     .logo {
         max-width: 180px;
         margin-bottom: 20px;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
     }
 
     .backup-text {
         font-size: 14px;
         margin-bottom: 8px;
         color: #555;
+        text-align: center;
     }
 
     h1 {
@@ -34,6 +35,7 @@
         font-weight: bold;
         color: #1a1a1a;
         text-shadow: 1px 1px 2px rgba(0,0,0,0.05);
+        text-align: center;
     }
 
     .message {
@@ -41,6 +43,7 @@
         margin-top: 15px;
         line-height: 1.5;
         color: #333;
+        text-align: center;
     }
 
     .download-link {
@@ -94,7 +97,7 @@
         background-color: #e6eefb;
         padding: 10px 20px;
         line-height: 1.4;
-        max-width: 800px;
+        max-width: 1000px;
         margin: 40px auto 0;
     }
 
@@ -108,13 +111,6 @@
         color: #004080;
     }
 
-    @media (max-width: 600px) {
-        .download-link {
-            width: 80%;
-            font-size: 18px;
-        }
-    }
-
     .corporate-ticker {
         position: fixed;
         top: 0;
@@ -124,10 +120,10 @@
         overflow: hidden;
         height: 40px;
         z-index: 9999;
-        box-shadow: 0 4px 8px rgba(0,0,0,0.15);
         display: flex;
         align-items: center;
         box-sizing: border-box;
+        box-shadow: 0 4px 8px rgba(0,0,0,0.15);
     }
 
     .ticker-text {
@@ -153,10 +149,71 @@
         100% { transform: translateX(-100%); }
     }
 
+    .main-layout {
+        display: flex;
+        justify-content: center;
+        gap: 20px;
+        margin-top: 30px;
+        flex-wrap: wrap;
+    }
+
+    .column {
+        flex: 1 1 200px;
+        max-width: 220px;
+        display: flex;
+        flex-direction: column;
+        gap: 15px;
+    }
+
+    .product-box {
+        background-color: #ffffff;
+        padding: 10px 12px;
+        border-radius: 8px;
+        box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+        text-align: left;
+        font-size: 14px;
+    }
+
+    .product-title {
+        font-weight: bold;
+        margin-bottom: 4px;
+    }
+
+    .product-prices {
+        font-size: 13px;
+        color: #555;
+        margin-bottom: 6px;
+    }
+
+    .buy-button {
+        display: inline-block;
+        background-color: #28a745;
+        color: white;
+        text-decoration: none;
+        padding: 6px 10px;
+        border-radius: 6px;
+        font-size: 13px;
+        font-weight: bold;
+        transition: background-color 0.2s;
+    }
+
+    .buy-button:hover {
+        background-color: #1e7e34;
+    }
+
+    .buy-note {
+        font-size: 10px;
+        color: #555;
+        margin-top: 2px;
+    }
+
+    .carousel-container {
+        flex: 1 1 600px;
+        max-width: 600px;
+    }
+
     .carousel {
         position: relative;
-        max-width: 600px;
-        margin: 30px auto;
         overflow: hidden;
         border-radius: 12px;
         border: 1px solid rgba(0,0,0,0.05);
@@ -204,63 +261,14 @@
         right: 10px;
     }
 
-    /* Nueva sección productos */
-    .products-container {
-        display: flex;
-        justify-content: space-between;
-        max-width: 1000px;
-        margin: 30px auto;
-        gap: 20px;
-    }
-
-    .product-column {
-        flex: 1;
-        max-width: 300px;
-        background-color: #f4f7fc;
-        border-radius: 12px;
-        padding: 15px;
-        box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-        overflow-y: auto;
-        max-height: 500px;
-    }
-
-    .product {
-        margin-bottom: 20px;
-        text-align: left;
-    }
-
-    .product h3 {
-        font-size: 16px;
-        font-weight: bold;
-        margin-bottom: 5px;
-    }
-
-    .product p {
-        font-size: 14px;
-        margin: 3px 0;
-    }
-
-    .buy-button {
-        display: inline-block;
-        margin-top: 5px;
-        padding: 8px 12px;
-        background-color: #28a745;
-        color: white;
-        border-radius: 6px;
-        text-decoration: none;
-        font-size: 14px;
-        font-weight: bold;
-        transition: background-color 0.2s;
-    }
-
-    .buy-button:hover {
-        background-color: #1e7e34;
-    }
-
-    .small-note {
-        font-size: 11px;
-        color: #555;
-        margin-left: 5px;
+    @media (max-width: 1100px) {
+        .main-layout {
+            flex-direction: column;
+            align-items: center;
+        }
+        .carousel-container {
+            max-width: 90%;
+        }
     }
 
 </style>
@@ -296,83 +304,89 @@
    <img src="macos.svg" alt="macOS"> Descargar para macOS
 </a>
 
-<div class="carousel">
-    <button class="carousel-arrow carousel-arrow-left">&#10094;</button>
-    <div class="carousel-track">
-        <img src="1.jpg" alt="RustDesk 1">
-        <img src="2.png" alt="RustDesk 2">
-        <img src="3.png" alt="RustDesk 3">
-        <img src="4.png" alt="RustDesk 4">
-    </div>
-    <button class="carousel-arrow carousel-arrow-right">&#10095;</button>
-</div>
-
-<!-- NUEVA SECCIÓN PRODUCTOS -->
-<div class="products-container">
-    <div class="product-column">
-        <!-- Oficina -->
-        <div class="product">
-            <h3>Software Ofimático</h3>
-            <p>Soluciones de oficina completas para documentos, hojas de cálculo y presentaciones.</p>
-            <p>Precio Perú: S/. 15 | Chile: $9,500 CLP</p>
-            <a href="https://wa.me/51945482880" target="_blank" class="buy-button">Comprar ahora <span class="small-note">(WhatsApp)</span></a>
+<div class="main-layout">
+    <!-- Columna Izquierda -->
+    <div class="column">
+        <div class="product-box">
+            <div class="product-title">Office y Productividad</div>
+            <div class="product-prices">Desde S/. 15 (Perú) | 9500 CLP (Chile)</div>
+            <div>Suite ofimática para trabajar en documentos, hojas de cálculo y presentaciones de manera profesional.</div>
+            <a href="https://wa.me/51945482880" target="_blank" class="buy-button">Comprar ahora</a>
+            <div class="buy-note">WSP</div>
         </div>
-
-        <!-- Antivirus -->
-        <div class="product">
-            <h3>Antivirus</h3>
-            <p>Protección de tus equipos por 1 año contra virus, malware y amenazas online.</p>
-            <p>Precio Perú: S/. 35 | Chile: $15,000 CLP</p>
-            <a href="https://wa.me/51945482880" target="_blank" class="buy-button">Comprar ahora <span class="small-note">(WhatsApp)</span></a>
+        <div class="product-box">
+            <div class="product-title">Antivirus (1 año)</div>
+            <div class="product-prices">Desde S/. 35 (Perú) | 15000 CLP (Chile)</div>
+            <div>Protección completa de tus equipos contra virus y malware.</div>
+            <a href="https://wa.me/51945482880" target="_blank" class="buy-button">Comprar ahora</a>
+            <div class="buy-note">WSP</div>
         </div>
-
-        <!-- PDF -->
-        <div class="product">
-            <h3>Gestión de PDF</h3>
-            <p>Edición, creación y conversión de archivos PDF de forma permanente.</p>
-            <p>Precio Perú: S/. 15 | Chile: $9,500 CLP</p>
-            <a href="https://wa.me/51945482880" target="_blank" class="buy-button">Comprar ahora <span class="small-note">(WhatsApp)</span></a>
-        </div>
-
-        <!-- Suite Creatividad -->
-        <div class="product">
-            <h3>Software de Diseño y Creatividad</h3>
-            <p>Acceso a herramientas de diseño profesional con suscripción anual para proyectos creativos.</p>
-            <p>Precio Perú: S/. 195 / 1 año | Chile: $69,500 CLP</p>
-            <a href="https://wa.me/51945482880" target="_blank" class="buy-button">Comprar ahora <span class="small-note">(WhatsApp)</span></a>
+        <div class="product-box">
+            <div class="product-title">PDF</div>
+            <div class="product-prices">Desde S/. 15 (Perú) | 9500 CLP (Chile)</div>
+            <div>Herramientas para crear, editar y gestionar documentos PDF de manera profesional.</div>
+            <a href="https://wa.me/51945482880" target="_blank" class="buy-button">Comprar ahora</a>
+            <div class="buy-note">WSP</div>
         </div>
     </div>
 
-    <div class="product-column">
-        <!-- Edición de Video -->
-        <div class="product">
-            <h3>Edición de Video</h3>
-            <p>Programas de edición de video profesionales para crear contenido de calidad.</p>
-            <p>Precio Perú: S/. 20 | Chile: $9,800 CLP</p>
-            <a href="https://wa.me/51945482880" target="_blank" class="buy-button">Comprar ahora <span class="small-note">(WhatsApp)</span></a>
+    <!-- Carrusel -->
+    <div class="carousel-container">
+        <div class="carousel">
+            <button class="carousel-arrow carousel-arrow-left">&#10094;</button>
+            <div class="carousel-track">
+                <img src="1.jpg" alt="RustDesk 1">
+                <img src="2.png" alt="RustDesk 2">
+                <img src="3.png" alt="RustDesk 3">
+                <img src="4.png" alt="RustDesk 4">
+            </div>
+            <button class="carousel-arrow carousel-arrow-right">&#10095;</button>
         </div>
+    </div>
 
-        <!-- Música -->
-        <div class="product">
-            <h3>Producción Musical</h3>
-            <p>Software para composición, mezcla y edición de audio profesional.</p>
-            <p>Precio Perú: S/. 20 | Chile: $9,500 CLP</p>
-            <a href="https://wa.me/51945482880" target="_blank" class="buy-button">Comprar ahora <span class="small-note">(WhatsApp)</span></a>
+    <!-- Columna Derecha -->
+    <div class="column">
+        <div class="product-box">
+            <div class="product-title">Software de Diseño y Creatividad</div>
+            <div class="product-prices">Desde S/. 15 (Perú) | 9500 CLP (Chile)</div>
+            <div>Programas de diseño gráfico y edición de imágenes para proyectos creativos.</div>
+            <a href="https://wa.me/51945482880" target="_blank" class="buy-button">Comprar ahora</a>
+            <div class="buy-note">WSP</div>
         </div>
-
-        <!-- Ingeniería CAD -->
-        <div class="product">
-            <h3>Suite de Ingeniería y CAD</h3>
-            <p>Herramientas profesionales de diseño y modelado 2D y 3D, suscripción vinculable a tu correo.</p>
-            <p>Precio Perú: S/. 65 / 1 año | S/. 85 / 2 años | Chile: $15,500 / $25,900 CLP</p>
-            <a href="https://wa.me/51945482880" target="_blank" class="buy-button">Comprar ahora <span class="small-note">(WhatsApp)</span></a>
+        <div class="product-box">
+            <div class="product-title">Suite Creatividad Profesional</div>
+            <div class="product-prices">S/. 195 / 1 año (Perú) | 69500 CLP / 1 año (Chile)</div>
+            <div>Paquete avanzado de aplicaciones creativas para diseño, ilustración y edición multimedia.</div>
+            <a href="https://wa.me/51945482880" target="_blank" class="buy-button">Comprar ahora</a>
+            <div class="buy-note">WSP</div>
         </div>
-
-        <!-- Otros Programas Especializados -->
-        <div class="product">
-            <h3>Otros Programas Especializados</h3>
-            <p>Disponemos de la mayoría de productos del mercado, consulte por el programa o licencia que necesita.</p>
-            <a href="https://wa.me/51945482880" target="_blank" class="buy-button">Consultar <span class="small-note">(WhatsApp)</span></a>
+        <div class="product-box">
+            <div class="product-title">Edición de Video</div>
+            <div class="product-prices">Desde S/. 20 (Perú) | 9800 CLP (Chile)</div>
+            <div>Software profesional para editar videos de forma sencilla y avanzada.</div>
+            <a href="https://wa.me/51945482880" target="_blank" class="buy-button">Comprar ahora</a>
+            <div class="buy-note">WSP</div>
+        </div>
+        <div class="product-box">
+            <div class="product-title">Software de Música</div>
+            <div class="product-prices">Desde S/. 20 (Perú) | 9500 CLP (Chile)</div>
+            <div>Programas para producción, mezcla y edición musical.</div>
+            <a href="https://wa.me/51945482880" target="_blank" class="buy-button">Comprar ahora</a>
+            <div class="buy-note">WSP</div>
+        </div>
+        <div class="product-box">
+            <div class="product-title">Suite CAD / Ingeniería</div>
+            <div class="product-prices">S/. 65 / 1 año | S/. 85 / 2 años (Perú) | 15500 / 1 año | 25900 / 2 años (CLP)</div>
+            <div>Software de diseño y modelado 2D/3D para ingeniería y arquitectura, vinculado a tu correo.</div>
+            <a href="https://wa.me/51945482880" target="_blank" class="buy-button">Comprar ahora</a>
+            <div class="buy-note">WSP</div>
+        </div>
+        <div class="product-box">
+            <div class="product-title">Otros Programas Especializados</div>
+            <div class="product-prices">Consulte por el programa o licencia que necesita</div>
+            <div>Disponemos de la mayoría de productos del mercado en diversas categorías.</div>
+            <a href="https://wa.me/51945482880" target="_blank" class="buy-button">Consultar</a>
+            <div class="buy-note">WSP</div>
         </div>
     </div>
 </div>
